css/style.css
* {
	margin: 0;
	padding: 0;
}

@font-face {
	font-family: FranklinGothicCondensed;
	src: url(fonts/FranklinGothic-Condensed.otf);
}

/*        NAV BEGINS            */
ul.nav {
	list-style-type: none;
	list-style: none;
	display: inline-block;
	text-align: center;
    margin: 0;
    padding: 0;
    overflow: hidden;
    position: fixed;
    top: 0;
    width: 100%;
    background-color: black;
}

ul.nav li {
	display: inline;
}

ul.nav li a {
	font-size: 250%;
	color: #fff200;
	display: inline-block;
	text-align: center;
	padding: 14px 16px;
	text-decoration: none;
	text-transform: uppercase;
	font-family: FranklinGothicCondensed;
}
/*        NAV ENDS              */

/*        DONATE BUTTON STARTS  */

#donate {
	position: fixed;
	bottom: 10%;
	z-index: 10;
}

/*        DONATE BUTTON END     */

/*        SECTIONS STARTS       */
section#home {
	background-image: url("../imgs/homebg.jpg");
	min-height: 1000px;

	background-attachment: fixed;
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
}

section#home p {
	position: absolute;
	left: 45%;
	top: 50%;
	max-width: 20%;
	color: red;
}

section#bios {
	padding: 100px 80px;
	background-color: white;
	text-align: justify;
}

section#bios h3 {
	text-align: center;
}

section#third {
	background-image: url("../imgs/About-bg.jpg");
	min-height: 400px;

	background-attachment: fixed;
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
}
/*        SECTIONS ENDS         */

